--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
   <section class="contenedor-formulario">
 
     <div class="contact_form">
-      <form name="contact" method="post" data-netlify="true" data-netlify-honeypot="bot-field">
+      <form name="contact" netlify>
         <div>
           <label for="nombre" class="nombre">Nombre</label>
           <input type="text" name="nombre" id="nombre" placeholder="Escribe tu nombre">
